@@ -1,0 +1,128 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<xsl:stylesheet version="1.0"
+  xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+
+  <xsl:output
+    method="xml"
+    version="version"
+    omit-xml-declaration="yes"
+    standalone="no"
+    cdata-section-elements="namelist"
+    indent="yes"/>
+  
+  <xsl:template match="/">
+    <article>
+      <id_article><xsl:value-of select="$article_id"/></id_article>
+      <id_rubrique><xsl:value-of select="$rubrique_id"/></id_rubrique>
+      <date><xsl:value-of select="$date"/></date>
+      <statut>publie</statut>
+      <id_secteur><xsl:value-of select="$section_id"/></id_secteur>
+      <maj>20041105212810</maj>
+      <export>oui</export>
+      <date_redac><xsl:value-of select="$date"/></date_redac>
+      <visites>0</visites>
+      <referers>0</referers>
+      <popularite>0</popularite>
+      <accepter_forum>non</accepter_forum>
+      <auteur_modif>1</auteur_modif>
+      <date_modif><xsl:value-of select="$date"/></date_modif>
+      <lang><xsl:value-of select="$language"/></lang>
+      <langue_choisie>non</langue_choisie>
+      <id_trad></id_trad>
+      <nom_site></nom_site>
+      <url_site></url_site>
+      <extra></extra>
+      <idx>oui</idx>
+      <id_version>0</id_version>
+      <lien_auteur>1</lien_auteur>
+      <ps>none</ps>
+
+      <xsl:for-each select="GCompris/Board[@name=$name]">
+        <surtitre>
+          <xsl:value-of select="@author"/>
+          (<xsl:value-of select="@name"/>.xml)
+        </surtitre>
+
+        <titre>
+          <xsl:variable name="tmptext" select="title[@xml:lang=$language]"/>
+          <xsl:if test="$tmptext = ''">
+            <xsl:value-of select="title"/>
+          </xsl:if>
+          <xsl:value-of select="$tmptext"/>
+        </titre>
+
+        <descriptif>
+          <xsl:variable name="tmptext" select="description[@xml:lang=$language]"/>
+          <xsl:if test="$tmptext = ''">
+            <xsl:value-of select="description"/>
+          </xsl:if>
+          <xsl:value-of select="$tmptext"/>
+        </descriptif>
+
+        <soustitre>
+          Prerequisite:
+
+          <xsl:variable name="tmptext3" select="prerequisite[@xml:lang=$language]"/>
+          <xsl:if test="$tmptext3 = ''">
+            <xsl:value-of select="prerequisite"/>
+          </xsl:if>
+          <xsl:value-of select="$tmptext3"/>
+        </soustitre>
+
+        <chapo>
+              <xsl:variable name="tmptext2" select="description[@xml:lang=$language]"/>
+              <xsl:if test="$tmptext2 = ''">
+                <xsl:value-of select="description"/>
+              </xsl:if>
+              <xsl:value-of select="$tmptext2"/>
+        </chapo>
+
+        <texte>
+          <HTML>
+            <IMG border="0" alt="" align="top">
+              <xsl:attribute name="src">
+                <xsl:value-of select="concat('screenshots/',@name)"/>.jpg</xsl:attribute>
+              </IMG>
+
+              <xsl:if test="(@type != 'chess') and (starts-with(@type,'python:')=false)">
+                <IMG border="0" alt="" src="boardicons/win.png">
+                </IMG>
+              </xsl:if>
+              <xsl:if test="@difficulty">
+                <IMG border="0" alt="" align="top">
+                  <xsl:attribute name="src">
+                    <xsl:value-of select="concat('boardicons/difficulty_star',@difficulty,'.png')"/>
+                  </xsl:attribute>
+                </IMG>
+              </xsl:if>
+
+              <IMG border="0" alt="" align="top">
+                <xsl:attribute name="src"><xsl:value-of select="@icon"/></xsl:attribute>
+              </IMG>
+            </HTML>
+        
+
+            {{{Goal:}}}
+
+            <xsl:variable name="tmptext4" select="goal[@xml:lang=$language]"/>
+            <xsl:if test="$tmptext4 = ''">
+              <xsl:value-of select="goal"/>
+            </xsl:if>
+            <xsl:value-of select="$tmptext4"/>
+
+            {{{Manual:}}}
+            
+            <xsl:variable name="tmptext5" select="manual[@xml:lang=$language]"/>
+            <xsl:if test="$tmptext5 = ''">
+              <xsl:value-of select="manual"/>
+            </xsl:if>
+            <xsl:value-of select="$tmptext5"/>
+        </texte>
+      </xsl:for-each>
+
+    </article>
+
+  </xsl:template>
+
+</xsl:stylesheet>
